--- a/src/Component/Shop/Shop.css
+++ b/src/Component/Shop/Shop.css
@@ -23,3 +23,29 @@
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     border: black 3px solid;
 }
+
+.cart-container button{
+    margin-top: 10px;
+    width: 100%;
+    height: 50px;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    border: none;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    position: sticky;
+    top:  28ch;
+}
+
+.cart-container button:hover{
+    background-color: rgb(226, 56, 64);
+    border: rgb(0, 0, 0) 3px solid;
+    color: black;
+}
+
+.abc{
+   position: sticky;
+    top:  42ch;
+}
